<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.NotesFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:text="@string/hello_blank_fragment"
            android:textSize="22dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rel_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title">

            <TextView
                android:id="@+id/new_hed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:text="@string/news_headline"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_hed"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/news_data"
                android:textSize="16dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_layout1">

            <TextView
                android:id="@+id/email_hed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:text="@string/email_subject_line"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_hed"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/email_data"
                android:textSize="16dp" />

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_above="@+id/next_button"
            android:text="up next:"/>

        <RelativeLayout
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Next"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>